Correção para estrutura aceitável do nodeJS que seria CommonJS; Estruturação de funcionamento de Models e Controllers; Efetivação do módulo que resolve as querys direcionadas ao banco

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 #.env
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/cupomstore
+DATABASE_URL_PG=postgres://postgres:postgres@localhost:5432/cupomstore
