--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "qrcode": "^1.3.2"
   }
 }
