Conclusão de conexão com mongoDB para logs e testes referentes a inserção

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 #.env
 DATABASE_URL_PG=postgres://postgres:postgres@localhost:5432/cupomstore
+DATABASE_URL_MONGO=mongodb://127.0.0.1:27017
+DATABASE=cupomstore
